lox-tests/tests/for/var_in_body.stderr
ERROR: at 'var': Expected expression, got Var
 --> 2:10
  |
2 | for (;;) var foo;
  |          ^-^
